--- a/index.html
+++ b/index.html
@@ -943,7 +943,7 @@
       </div>
       
       <div >
-        <h3 style="color: aqua;">ROHAN GUPTA(MCA,B.SC)</h3>
+        <h3 style="color: aqua;">ROHAN GUPTA(MCA,B.SC comp.sci)</h3>
         </div>
 
 
